[tool.poetry]
name = "TouchPanel"
version = "0.1.7"
description = ""
authors = ["PaddeCraft <70023807+PaddeCraft@users.noreply.github.com>"]
include = ["touchpanel/templates/**/*", "touchpanel/static/**/*", "touchpanel/cross.jpg"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.1"
simple-websocket = "^0.8.1"
flask-sqlalchemy = "^3.0.0"
obs-websocket-py = "0.5.3"
cuid = "^0.3"
obsws-python = "^1.1.1"
toml = "^0.10.2"
pypresence = "^4.2.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.scripts]
touchpanel = "touchpanel.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
